RESOLVED FIXED141613
[Mac] Possible DDActionContext leaks, RetainPtr cleanup
https://bugs.webkit.org/show_bug.cgi?id=141613
Summary [Mac] Possible DDActionContext leaks, RetainPtr cleanup
Joseph Pecoraro
Reported 2015-02-14 18:54:37 PST
* SUMMARY Possible DDActionContext leaks based on shadey RetainPtr usage. Expected an adopt and there was none. - RetainPtr<DDActionContext> actionContext = [allocDDActionContextInstance() init]; + RetainPtr<DDActionContext> actionContext = adoptNS([allocDDActionContextInstance() init]);
Attachments
[PATCH] Proposed Fix (3.71 KB, patch)
2015-02-14 18:56 PST, Joseph Pecoraro
no flags
[PATCH] Proposed Fix (3.71 KB, patch)
2015-02-14 19:27 PST, Joseph Pecoraro
no flags
Joseph Pecoraro
Comment 1 2015-02-14 18:56:20 PST
Created attachment 246607 [details] [PATCH] Proposed Fix
Joseph Pecoraro
Comment 2 2015-02-14 19:27:49 PST
Created attachment 246610 [details] [PATCH] Proposed Fix
Tim Horton
Comment 3 2015-02-14 20:48:56 PST
Comment on attachment 246610 [details] [PATCH] Proposed Fix View in context: https://bugs.webkit.org/attachment.cgi?id=246610&action=review > Source/WebKit/mac/WebView/WebActionMenuController.mm:280 > + RetainPtr<DDActionContext> actionContext = adoptNS([allocDDActionContextInstance() init]); Nothing shady about it, it's just wrong. Good catch!
WebKit Commit Bot
Comment 4 2015-02-14 20:54:35 PST
Comment on attachment 246610 [details] [PATCH] Proposed Fix Clearing flags on attachment: 246610 Committed r180119: <http://trac.webkit.org/changeset/180119>
WebKit Commit Bot
Comment 5 2015-02-14 20:54:39 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.