[Mac] Possible DDActionContext leaks, RetainPtr cleanup https://bugs.webkit.org/show_bug.cgi?id=141613

Patch by Joseph Pecoraro <pecoraro@apple.com> on 2015-02-14
Reviewed by Tim Horton.

Source/WebKit/mac:

* WebCoreSupport/WebEditorClient.mm:
(WebEditorClient::WebEditorClient):
Avoid unnecessary retain/autorelease by adopting.

* WebView/WebActionMenuController.mm:
(-[WebActionMenuController _defaultMenuItemsForDataDetectableLink]):
Adopt the allocated object.

Source/WebKit2:

* UIProcess/mac/WKActionMenuController.mm:
(-[WKActionMenuController _defaultMenuItemsForDataDetectableLink]):
Adopt the allocated object.

Canonical link: https://commits.webkit.org/159640@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@180119 268f45cc-cd09-0410-ab3c-d52691b4dbfc