Source/WebKit2/UIProcess/mac/WKActionMenuController.mm
@@ -488,7 +488,7 @@ static NSString *pathToPhotoOnDisk(NSString *suggestedFilename)
 - (NSArray *)_defaultMenuItemsForDataDetectableLink
 {
     RefPtr<WebHitTestResult> hitTestResult = [self _webHitTestResult];
-    RetainPtr<DDActionContext> actionContext = [allocDDActionContextInstance() init];
+    RetainPtr<DDActionContext> actionContext = adoptNS([allocDDActionContextInstance() init]);
 
     // FIXME: Should this show a yellow highlight?
     _currentActionContext = [actionContext contextForView:_wkView altMode:YES interactionStartedHandler:^() {
